--- a/Exercise1.ipynb
+++ b/Exercise1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Exercise1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNz3TD6nc1O3CJFqgcfI/xD",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOzYGU52gBg9uepwXkECQUc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1556,7 +1557,7 @@
       "source": [
         "uploaded = files.upload()"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1589,15 +1590,41 @@
         "colab": {}
       },
       "source": [
-        ""
+        "from google.colab import drive"
       ],
-      "execution_count": 37,
+      "execution_count": 39,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "29e9mqLD272v",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#drive.mount('/content/gdrive')"
+      ],
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v3NYQeny4Gwi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#!ls gdrive/My Drive/path"
+      ],
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xDES-Ct54etV",
         "colab_type": "code",
         "colab": {}
       },
