--- a/Exercise_3_Regression_Problem.ipynb
+++ b/Exercise_3_Regression_Problem.ipynb
@@ -9,10 +9,9 @@
         "wUTfEWiaT4XP",
         "HzovrSZdNTNH",
         "MUzp-2_cR_8P",
-        "NmCXIHVNRtQT",
         "z3g1CZdWRmpR"
       ],
-      "authorship_tag": "ABX9TyOLO5zRP8es5heY14mjmBDG",
+      "authorship_tag": "ABX9TyOti0SKNKxVO6W4xAvjCGJP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1002,7 +1001,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## **Testing The Accuracy Of First Neuron**"
+        "##  **Testing The Accuracy Of First Neuron** *Hence Proved That With Every 2.04 years No.of Transistors get Doubled*"
       ]
     },
     {
